# bayes_zeeman_hi

./: README.md  pyproject.toml  requirements.txt  setup.py
bayes_zeeman_hi/: __init__.py  absorption_model.py  physics.py
notebooks/: absorption_model  absorption_model.ipynb  optimization.ipynb
